--- a/main/src/scss/opintoni/_week-feed.scss
+++ b/main/src/scss/opintoni/_week-feed.scss
@@ -37,7 +37,8 @@ $first-and-last-tab-padding: 0.2em;
   }
 
   li {
-    flex: 1 0 90px;
+    flex: 1 0 auto;
+    min-width: 90px;
     border-bottom: 2px solid;
     border-color: $lightsilver;
     text-align: center;
